feat(spark-job): add Spark Structured Streaming job with Kafka + Postgres sinks
- implement Spark job with flatten + aggregate transforms
- configure Dockerfile with Kafka connector JARs
- update docker-compose to include spark-job, topic-setup, and db
- add wait-for-topics readiness script
- extend config bridge and templates for Spark

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,38 @@
+# Kafka
+KAFKA_BROKER=kafka:9092
+KAFKA_TOPIC_RAW=cdr_raw
+KAFKA_TOPIC_FLAT=cdr_flattened
+KAFKA_TOPIC_ERROR=cdr_error
+KAFKA_SECURITY_PROTOCOL=PLAINTEXT
+
+# Producer tuning
+PRODUCER_LINGER_MS=5
+PRODUCER_BATCH_BYTES=32768
+PRODUCER_COMPRESSION=lz4
+PRODUCER_RETRIES=10
+PRODUCER_ENABLE_IDEMPOTENCE=true
+PRODUCER_MAX_IN_FLIGHT=5
+
+# Spark
+SPARK_CHECKPOINT_DIR=/spark-checkpoints/cdr
+SPARK_READ_STARTING_OFFSETS=latest
+SPARK_MAX_OFFSETS_PER_TRIGGER=10000
+SPARK_WATERMARK_MINUTES=10
+SPARK_WINDOW_MINUTES=5
+SPARK_FAIL_ON_DATA_LOSS=false
+
+# Postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_DB=cdrdb
+POSTGRES_DB_SCHEMA=public
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=changeme
+POSTGRES_JDBC_OPTIONS=stringtype=unspecified
+
 # Generator
-# Number of records to generate per second
 GENERATOR_RATE_PER_SEC=10
-
-# Random seed for reproducibility
 GENERATOR_SEED=42
-
-# Path to the generator configuration file
-GENERATOR_CONFIG=generated-config/generator/generator.yml
-
-# Path to the logging configuration file
-LOGGING_CONFIG=generated-config/generator/logging.json
-
-# Path to the CDR schema definition
-CDR_SCHEMA=common/schemas/cdr_schema.json
+GENERATOR_CONFIG=/opt/app/config/generator.yml
+LOGGING_CONFIG=/opt/app/config/logging.json
+CDR_SCHEMA=/opt/app/common/schemas/cdr_schema.json
