--- a/services/producer/Dockerfile
+++ b/services/producer/Dockerfile
@@ -17,7 +17,10 @@ COPY . .
 
 # Ensure wait-for-it.sh is executable inside the image
 COPY scripts/wait-for-it.sh /usr/local/bin/wait-for-it.sh
-RUN chmod +x /usr/local/bin/wait-for-it.sh
+RUN apt-get update && apt-get install -y dos2unix \
+    && dos2unix /usr/local/bin/wait-for-it.sh \
+    && chmod +x /usr/local/bin/wait-for-it.sh \
+    && apt-get purge -y dos2unix && apt-get autoremove -y && rm -rf /var/lib/apt/lists/*
 
 # Environment & runtime setup
 ENV PRODUCER_CONFIG=/opt/app/config/producer.yml
