--- a/services/spark_job/requirements.txt
+++ b/services/spark_job/requirements.txt
@@ -3,12 +3,19 @@ click==8.2.1
 colorama==0.4.6
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+numpy==2.3.2
+pandas==2.3.2
 psycopg2-binary==2.9.10
 py4j==0.10.9.9
 pydantic==2.11.7
 pydantic_core==2.33.2
+pyspark==4.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 PyYAML==6.0.2
 services==0.1.1
+six==1.17.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
